# Resume-Builder-TeX

./: .dockerignore  .editorconfig  .env  .env.example  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  TECHNICAL.md  __main__.py  api.py  changes.md  config.py  docs  main.py  main_test.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt
__legacy__/: database_manager.py  json_loader.py  test_hardcode_sections_pdf.py
api/: dependencies.py
config/: __init__.py  config.py  database_config.py  llm_config.py  logger_config.py  settings.py
core/: __init__.py
cover_letter/: cover_letter_template.tex
design/: 1-presentation.md  3-api_documentation.md  4-security.md  5-configuration.md  6-testing.md  class_diagram.js  er_diagram.mmd  file_structure.txt  functionality.md  target_file_structure.txt
easy_applier/: job_applier.py  job_extractor.py  linkedin_job_manager.py  linkedin_scraper.py  main.py  main_easy_applier.py  resume_generator.py  utils.py
engine/: ai_strategies.py  cover_letter_creator.py  hardcode_sections.py  process_section.py  resume_creator.py  runners.py
files/: user_information.preambles.json  user_information.tex_headers.json
loaders/: job_description_loader.py  json_loader.py  mongo_loader.py  prompt_loader.py  tex_loader.py
models/: database.py
output/: preamble.tex
parsers/: indeed_parser.py
prompts/: awards_prompt.txt  career_summary_prompt.txt  cover_letter_prompt.txt  education_prompt.txt  folder_name_prompt.txt  header_prompt.txt  job_titles_prompt.txt  personal_information_prompt.txt  projects_prompt.txt  publications_prompt.txt  skills_prompt.txt  system_prompt.txt  work_experience_prompt.txt
scripts/: reset_password.py  resume_restructure.py
src/: process_section.py
test/: test_indeed_parser.py  test_process_section.py
tests/: .coverage  conftest.py  (+14 more)
(+196 files in other folders)
